# file_server

./: .gitignore  CMakeLists.txt  Makefile  c  client  client.c  client.cpp  client.hpp  clientProcessor.cpp  commands.c  commands.cpp  exemplo_pipes.c  handleClientInput.c  handleClientInput.cpp  handleClientOutput.cpp  main.c  message_struct.h  s  serializer.c  server  server.c  server.cpp  server.hpp  serverProcessor.cpp  teste.cpp  utils.cpp  utils.hpp
SerDes/: deserializer.c  message_struct.h  serializer.c
h/: message_struct.h  message_struct.hpp  packet_struct.hpp
include/: client.hpp  host.hpp  message_struct.hpp  ring.hpp  server.hpp  utils.hpp
includes/: client.hpp  server.hpp
server_files/client1/: a.txt
src/: client.cpp  clientProcessor.cpp  host.cpp  mainHost.cpp  ring.cpp  server.cpp  serverProcessor.cpp  utils.cpp
